# verifybamid-py

./: .gitignore  README.md  pyproject.toml
nextflow/: main.nf  nextflow.config
nextflow/assets/: NO_CHIP
scripts/: bench_cores.sh
src/verifybamid_py/: __init__.py  build_chip.py  build_panel.py  downsample.py  estimate.py  pileup.py  run.py
